--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root {
+  height: 100%;
+  width: 100%;
+
+  background-color: rgb(252, 252, 252);
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 100;
+  src: url("../public/font/Pretendard-Thin.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 200;
+  src: url("../public/font/Pretendard-ExtraLight.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 300;
+  src: url("../public/font/Pretendard-Light.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 400;
+  src: url("../public/font/Pretendard-Medium.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 500;
+  src: url("../public/font/Pretendard-Regular.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 600;
+  src: url("../public/font/Pretendard-SemiBold.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 700;
+  src: url("../public/font/Pretendard-Bold.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 800;
+  src: url("../public/font/Pretendard-ExtraBold.woff") format("truetype");
+}
+
+@font-face {
+  font-family: "Pretendard";
+  font-display: fallback;
+  font-weight: 900;
+  src: url("../public/font/Pretendard-Black.woff") format("truetype");
 }
